# YA_MCPServer_Template

./: README.md  bridge_server.py  config.yaml  deepseek_mcp_cli.py  env.yaml  finance_mcp_client.py  pyproject.toml
YA_Agent/: base_agent.py  finance_agent.py
core/: predictor.py
prompts/: finance_prompt.py
resources/: finance_resource.py
tools/: advice.py  finance_tool.py  news.py  predict_tool.py  risk.py
web/: app.js  index.html  style.css
